hphp/test/slow/readonly/inout_readonly.php
<?hh
<<file:__EnableUnstableFeatures("readonly")>>
class Foo {}
function foo(
  inout readonly Foo $x // error
): void {
}
